--- a/style/scss/layout/_header.scss
+++ b/style/scss/layout/_header.scss
@@ -37,8 +37,11 @@ header {
   }
 
   .logo {
+    color: black;
+    font-size: 2rem;
+    font-family: "Lato";
     width: auto;
-    height: 0.8rem;
+    height: 1.8rem;
   }
 
   .cart-count {
