--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -30,3 +30,5 @@
 @import "components/loader";
 @import "components/breadcrumbs";
 @import "components/product-card";
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Oswald:wght@200;300;600;700&family=Poppins:ital,wght@0,100;1,100&display=swap');
