--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -21,6 +21,7 @@
 @import "pages/about";
 @import "pages/login";
 @import "pages/account";
+@import "pages/random";
 
 // Components
 @import "components/cart-modal";
